
Release 5.1.1 (unreleased)
==========================

Bug fixes
---------

- Fix link with user functions for movable builds linking directly with
  Catalyst (e.g. Salome_CFD).

- Fix weights handling in radiative Gaussian quadrature.

- GUI: fix handling of exchange coefficient boundary conditions.

- Fix automatic installer crash due to malformed string format.

- Fix generation of Doxygen documentation.

Release 5.1.0 (October 10 2017)
===============================

Numerics
--------

- Atmospheric model: added partial radiative transfer properties model.

- Make supersonic outlet boundary condition implicit (compressible module).

- Added fallback mechanism to allow less stable but faster Krylov solvers
  (such as BiCGstab) to switch temporarily to GMRES in case of
  convergence error.

- Switch from Jacobi to processor-local symmetric Gauss-Seidel as default
  linear solver type for non-symmetric systems.

- Simplify selection of local symmetric Gauss-Seidel linear solver variant.

- Make vectorial and tensorial slope tests invariant by rotation and
  identical for all components (previous version available for the
  velocity with isstpc = -1 in var_cal_opt structure).

- Add an option to blend with upwind when the slope test is activated. The
  key word is blend_st in var_cal_opt structure.

Default option changes
----------------------

- Make coupled solving for DRSM turbulence models default option.

- Make prediction of mass fluxes before momentum solving optionnal. This
  impact variable density algorithm (idilat>=2).

- Make advanced turbulence inititalisation for k-omega, Bl-v2/k and
  EBRSM turbulence models default option.

- Slope test on vector (and tensor) is now invariant by rotation by default

User changes
------------

- When importing CGNS files and requiring additional groups for mesh
  sections or zones, do not try to build boundary face groups based
  on vertex boundary conditions.
