@@ -176,7 +176,11 @@ class SetTreeLocationDialogHandler(SetTreeLocationDialog):
         self.StudyPath = ''
         self.StudyName = ''
         self.CaseRefName = ''
-        neptune_status = True
+        neptune_status = False
+        cs_root_dir = os.getenv("CS_ROOT_DIR")
+        if cs_root_dir:
+            if "neptune_cfd" in os.listdir(os.path.join(cs_root_dir, "bin")):
+                neptune_status = True
         if not neptune_status:
             self.findChild(QRadioButton,"radioButtonNeptune").setEnabled(False)
 
@@ -195,8 +199,6 @@ class SetTreeLocationDialogHandler(SetTreeLocationDialog):
         self.findChild(QCheckBox,"checkBoxLoad").setChecked(False)
         self.findChild(QDialogButtonBox,"buttonBox").button(QDialogButtonBox.Ok).setEnabled(False)
         self.findChild(QLineEdit, "CaseLineEdit").setEnabled(False)
-        if "neptune_cfd" not in os.listdir(os.path.join(os.getenv("CS_ROOT_DIR"),"bin")):
-            self.findChild(QRadioButton,"radioButtonNeptune").setVisible(False)
         self.CaseNames              = ""
         self.CreateOption           = False
         self.code                   = None
